--- a/yedamEmpl/src/myapp/viewPackage/Root.fxml
+++ b/yedamEmpl/src/myapp/viewPackage/Root.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="180.0" prefWidth="500.0"
 			fx:controller="myapp.viewPackage.RootController">
@@ -16,10 +17,10 @@
 			<Label layoutX="125.0" layoutY="9.0" text="TableView" />
 			<TableView fx:id="tableView" layoutX="120.0" layoutY="30.0"
 				prefHeight="100.0" prefWidth="290.0">
-				<colums>
+				<columns>
 					<TableColumn prefWidth="100.0" text="스마트폰" />
 					<TableColumn prefWidth="100.0" text="이미지" />
-				</colums>
+				</columns>
 			</TableView>
 			<Label layoutX="425.0" layoutY="9.0" text="ImageView" />
 			<ImageView fx:id="imageView" fitHeight="100.0" fitWidth="60.0"
